# zero-shot-text-classification

./: .gitignore  README.md  blog.md  pyproject.toml  utils.py  zero_shot.py  zero_shot_example.py  zero_shot_gnad10.py  zero_shot_mlsum.py
