[tool.poetry]
name = "intern-topic-classification"
version = "0.1.0"
description = ""
authors = ["fabianmax <fabian.mueller@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.22.1"
datasets = "^2.4.0"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
sentencepiece = "^0.1.97"
protobuf = "3.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
